--- a/coworking-service-app/src/main/resources/application.properties
+++ b/coworking-service-app/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 db.url=jdbc:postgresql://localhost:55432/coworking_service_db
 db.username=user
 db.password=1234
+
+liquibase.changelogFile=db/changelog/changelog.xml
+liquibase.defaultSchemaName=liquibase
