--- a/coworking-service-app/pom.xml
+++ b/coworking-service-app/pom.xml
@@ -188,28 +188,6 @@
         </configuration>
       </plugin>
 
-<!--      <plugin>-->
-<!--        <groupId>org.apache.maven.plugins</groupId>-->
-<!--        <artifactId>maven-compiler-plugin</artifactId>-->
-<!--        <version>${maven-compiler-plugin.version}</version>-->
-<!--        <configuration>-->
-<!--          <source>${maven.compiler.source}</source>-->
-<!--          <target>${maven.compiler.target}</target>-->
-<!--          <annotationProcessorPaths>-->
-<!--            <path>-->
-<!--              <groupId>org.mapstruct</groupId>-->
-<!--              <artifactId>mapstruct-processor</artifactId>-->
-<!--              <version>${mapstruct.version}</version>-->
-<!--            </path>-->
-<!--            <path>-->
-<!--              <groupId>org.aspectj</groupId>-->
-<!--              <artifactId>aspectjrt</artifactId>-->
-<!--              <version>1.9.7</version>-->
-<!--            </path>-->
-<!--          </annotationProcessorPaths>-->
-<!--        </configuration>-->
-<!--      </plugin>-->
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -223,36 +201,41 @@
               <artifactId>mapstruct-processor</artifactId>
               <version>${mapstruct.version}</version>
             </path>
+            <path>
+              <groupId>org.aspectj</groupId>
+              <artifactId>aspectjrt</artifactId>
+              <version>${aspectj.version}</version>
+            </path>
           </annotationProcessorPaths>
         </configuration>
       </plugin>
 
-<!--      <plugin>-->
-<!--        <groupId>org.codehaus.mojo</groupId>-->
-<!--        <artifactId>aspectj-maven-plugin</artifactId>-->
-<!--        <version>${plugin.aspectj.version}</version>-->
-<!--        <configuration>-->
-<!--          <complianceLevel>16</complianceLevel>-->
-<!--          <source>16</source>-->
-<!--          <target>16</target>-->
-<!--          <aspectLibraries>-->
-<!--            <aspectLibrary>-->
-<!--              <groupId>org.aspectj</groupId>-->
-<!--              <artifactId>aspectjrt</artifactId>-->
-<!--            </aspectLibrary>-->
-<!--          </aspectLibraries>-->
-<!--          <showWeaveInfo>true</showWeaveInfo>-->
-<!--          <forceAjcCompile>true</forceAjcCompile>-->
-<!--          <encoding>UTF-8</encoding>-->
-<!--        </configuration>-->
-<!--        <executions>-->
-<!--          <execution>-->
-<!--            <goals>-->
-<!--              <goal>compile</goal>-->
-<!--            </goals>-->
-<!--          </execution>-->
-<!--        </executions>-->
-<!--      </plugin>-->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>aspectj-maven-plugin</artifactId>
+        <version>${plugin.aspectj.version}</version>
+        <configuration>
+          <complianceLevel>16</complianceLevel>
+          <source>16</source>
+          <target>16</target>
+          <aspectLibraries>
+            <aspectLibrary>
+              <groupId>org.aspectj</groupId>
+              <artifactId>aspectjrt</artifactId>
+            </aspectLibrary>
+          </aspectLibraries>
+          <showWeaveInfo>true</showWeaveInfo>
+          <forceAjcCompile>true</forceAjcCompile>
+          <encoding>UTF-8</encoding>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>compile</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
 
   </plugins>
  </build>
