--- a/coworking-service-app/pom.xml
+++ b/coworking-service-app/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>makeev</groupId>
   <artifactId>coworking-service-app</artifactId>
-  <version>3.1.3</version>
+  <version>4.0</version>
   <packaging>war</packaging>
 
   <name>coworking-service-app</name>
@@ -23,27 +23,64 @@
     <maven.compiler.target>17</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <spring.version>6.1.11</spring.version>
     <slf4j-api.version>2.0.13</slf4j-api.version>
     <mockito.version>5.12.0</mockito.version>
     <assertj-core.version>3.26.0</assertj-core.version>
     <junit-jupiter-api.version>5.11.0-M2</junit-jupiter-api.version>
     <junit-jupiter-engine.version>5.11.0-M2</junit-jupiter-engine.version>
     <mockito-junit-jupiter.version>5.12.0</mockito-junit-jupiter.version>
-    <maven-surefire-plugin.version>3.3.0</maven-surefire-plugin.version>
-    <maven-javadoc-plugin.version>3.7.0</maven-javadoc-plugin.version>
     <postgresql.version>42.7.3</postgresql.version>
     <liquibase.version>4.28.0</liquibase.version>
     <testcontainers.version>1.19.8</testcontainers.version>
     <jakarta.servlet.version>6.1.0</jakarta.servlet.version>
-    <jackson.version>2.17.1</jackson.version>
-    <aspectj.version>1.9.20.1</aspectj.version>
-    <plugin.war.version>3.4.0</plugin.war.version>
-    <plugin.aspectj.version>1.15.0</plugin.aspectj.version>
+    <jackson.version>2.17.2</jackson.version>
+    <aspectj.version>1.9.22.1</aspectj.version>
     <mapstruct.version>1.6.0.Beta2</mapstruct.version>
+    <maven-surefire-plugin.version>3.3.0</maven-surefire-plugin.version>
+    <maven-javadoc-plugin.version>3.7.0</maven-javadoc-plugin.version>
+    <plugin.war.version>3.4.0</plugin.war.version>
     <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
   </properties>
 
   <dependencies>
+<!--    <dependency>-->
+<!--      <groupId>javax.servlet</groupId>-->
+<!--      <artifactId>javax.servlet-api</artifactId>-->
+<!--      <version>4.0.1</version>-->
+<!--      <scope>provided</scope>-->
+<!--    </dependency>-->
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aspects</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+<!--    <dependency>-->
+<!--      <groupId>io.springfox</groupId>-->
+<!--      <artifactId>springfox-boot-starter</artifactId>-->
+<!--      <version>3.0.0</version>-->
+<!--    </dependency>-->
+
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+      <version>3.0.0</version>
+    </dependency>
+
+<!--    <dependency>-->
+<!--      <groupId>io.springfox</groupId>-->
+<!--      <artifactId>springfox-swagger-ui</artifactId>-->
+<!--      <version>3.0.0</version>-->
+<!--    </dependency>-->
+
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
@@ -131,17 +168,17 @@
       <version>${jackson.version}</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.aspectj</groupId>
-      <artifactId>aspectjrt</artifactId>
-      <version>${aspectj.version}</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.aspectj</groupId>-->
+<!--      <artifactId>aspectjrt</artifactId>-->
+<!--      <version>${aspectj.version}</version>-->
+<!--    </dependency>-->
 
-    <dependency>
-      <groupId>org.aspectj</groupId>
-      <artifactId>aspectjweaver</artifactId>
-      <version>${aspectj.version}</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.aspectj</groupId>-->
+<!--      <artifactId>aspectjweaver</artifactId>-->
+<!--      <version>${aspectj.version}</version>-->
+<!--    </dependency>-->
 
     <dependency>
       <groupId>org.mapstruct</groupId>
@@ -201,40 +238,8 @@
               <artifactId>mapstruct-processor</artifactId>
               <version>${mapstruct.version}</version>
             </path>
-            <path>
-              <groupId>org.aspectj</groupId>
-              <artifactId>aspectjrt</artifactId>
-              <version>${aspectj.version}</version>
-            </path>
           </annotationProcessorPaths>
         </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>aspectj-maven-plugin</artifactId>
-        <version>${plugin.aspectj.version}</version>
-        <configuration>
-          <complianceLevel>16</complianceLevel>
-          <source>16</source>
-          <target>16</target>
-          <aspectLibraries>
-            <aspectLibrary>
-              <groupId>org.aspectj</groupId>
-              <artifactId>aspectjrt</artifactId>
-            </aspectLibrary>
-          </aspectLibraries>
-          <showWeaveInfo>true</showWeaveInfo>
-          <forceAjcCompile>true</forceAjcCompile>
-          <encoding>UTF-8</encoding>
-        </configuration>
-        <executions>
-          <execution>
-            <goals>
-              <goal>compile</goal>
-            </goals>
-          </execution>
-        </executions>
       </plugin>
 
   </plugins>
