--- a/coworking-service-app/pom.xml
+++ b/coworking-service-app/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>makeev</groupId>
   <artifactId>coworking-service-app</artifactId>
-  <version>4.1</version>
+  <version>4.1.1</version>
   <packaging>war</packaging>
 
   <name>coworking-service-app</name>
@@ -43,12 +43,6 @@
   </properties>
 
   <dependencies>
-<!--    <dependency>-->
-<!--      <groupId>javax.servlet</groupId>-->
-<!--      <artifactId>javax.servlet-api</artifactId>-->
-<!--      <version>4.0.1</version>-->
-<!--      <scope>provided</scope>-->
-<!--    </dependency>-->
 
     <dependency>
       <groupId>org.springframework</groupId>
@@ -68,11 +62,11 @@
 <!--      <version>3.0.0</version>-->
 <!--    </dependency>-->
 
-    <dependency>
-      <groupId>io.springfox</groupId>
-      <artifactId>springfox-swagger2</artifactId>
-      <version>3.0.0</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>io.springfox</groupId>-->
+<!--      <artifactId>springfox-swagger2</artifactId>-->
+<!--      <version>3.0.0</version>-->
+<!--    </dependency>-->
 
 <!--    <dependency>-->
 <!--      <groupId>io.springfox</groupId>-->
