--- a/coworking-service-app/src/main/resources/properties.yml
+++ b/coworking-service-app/src/main/resources/properties.yml
@@ -1,4 +1,5 @@
 db:
+  driver: org.postgresql.Driver
   url: jdbc:postgresql://localhost:55432/coworking_service_db
   username: user
   password: 1234
