--- a/coworking-service-app/pom.xml
+++ b/coworking-service-app/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>makeev</groupId>
   <artifactId>coworking-service-app</artifactId>
-  <version>4.2</version>
+  <version>4.3</version>
   <packaging>war</packaging>
 
   <name>coworking-service-app</name>
@@ -23,7 +23,9 @@
     <maven.compiler.target>17</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <spring.version>6.1.11</spring.version>
+    <spring.version>5.3.37</spring.version>
+    <swagger.version>2.9.2</swagger.version>
+    <commons-dbcp.version>2.12.0</commons-dbcp.version>
     <slf4j-api.version>2.0.13</slf4j-api.version>
     <mockito.version>5.12.0</mockito.version>
     <assertj-core.version>3.26.0</assertj-core.version>
@@ -33,7 +35,7 @@
     <postgresql.version>42.7.3</postgresql.version>
     <liquibase.version>4.28.0</liquibase.version>
     <testcontainers.version>1.19.8</testcontainers.version>
-    <jakarta.servlet.version>6.1.0</jakarta.servlet.version>
+    <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
     <jackson.version>2.17.2</jackson.version>
     <mapstruct.version>1.6.0.Beta2</mapstruct.version>
     <maven-surefire-plugin.version>3.3.0</maven-surefire-plugin.version>
@@ -61,24 +63,30 @@
       <version>${spring.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+      <version>${swagger.version}</version>
+    </dependency>
 
-    <!--    <dependency>-->
-<!--      <groupId>io.springfox</groupId>-->
-<!--      <artifactId>springfox-boot-starter</artifactId>-->
-<!--      <version>3.0.0</version>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
+      <version>${swagger.version}</version>
+    </dependency>
 
-<!--    <dependency>-->
-<!--      <groupId>io.springfox</groupId>-->
-<!--      <artifactId>springfox-swagger2</artifactId>-->
-<!--      <version>3.0.0</version>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>${javax.servlet-api.version}</version>
+      <scope>provided</scope>
+    </dependency>
 
-<!--    <dependency>-->
-<!--      <groupId>io.springfox</groupId>-->
-<!--      <artifactId>springfox-swagger-ui</artifactId>-->
-<!--      <version>3.0.0</version>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-dbcp2</artifactId>
+      <version>${commons-dbcp.version}</version>
+    </dependency>
 
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -152,13 +160,6 @@
       <artifactId>junit-jupiter</artifactId>
       <version>${testcontainers.version}</version>
       <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>jakarta.servlet</groupId>
-      <artifactId>jakarta.servlet-api</artifactId>
-      <version>${jakarta.servlet.version}</version>
-      <scope>provided</scope>
     </dependency>
 
     <dependency>
