--- a/coworking-service-app/pom.xml
+++ b/coworking-service-app/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>makeev</groupId>
   <artifactId>coworking-service-app</artifactId>
-  <version>4.4.1</version>
+  <version>4.5</version>
   <packaging>war</packaging>
 
   <name>coworking-service-app</name>
@@ -36,8 +36,10 @@
     <liquibase.version>4.28.0</liquibase.version>
     <testcontainers.version>1.19.8</testcontainers.version>
     <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
+    <lombok.version>1.18.30</lombok.version>
     <jackson.version>2.17.2</jackson.version>
     <mapstruct.version>1.6.0.Beta2</mapstruct.version>
+    <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
     <maven-surefire-plugin.version>3.3.0</maven-surefire-plugin.version>
     <maven-javadoc-plugin.version>3.7.0</maven-javadoc-plugin.version>
     <plugin.war.version>3.4.0</plugin.war.version>
@@ -80,6 +82,12 @@
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger-ui</artifactId>
       <version>${swagger.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
     </dependency>
 
     <dependency>
@@ -233,6 +241,16 @@
               <artifactId>mapstruct-processor</artifactId>
               <version>${mapstruct.version}</version>
             </path>
+            <path>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+              <version>${lombok.version}</version>
+            </path>
+            <dependency>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok-mapstruct-binding</artifactId>
+              <version>${lombok-mapstruct-binding.version}</version>
+            </dependency>
           </annotationProcessorPaths>
         </configuration>
       </plugin>
